auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96708f2d",
+   "id": "6d943831",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914eac32",
+   "id": "ba1b9d91",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e290590",
+   "id": "e177018a",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0686b203",
+   "id": "f6aae6e6",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd07e274",
+   "id": "5107e474",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1762728654.3571453,
+  "date": 1763689794.336994,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
