--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80d87564",
+   "id": "67577a02",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a42cd76a",
+   "id": "f69a35f3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ecdd711",
+   "id": "27def3dd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd11a67",
+   "id": "90b7b3ed",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c87f5c5f",
+   "id": "e305d50f",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff7fd19",
+   "id": "63f45e8a",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0384fc64",
+   "id": "13123cfb",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8310dbfa",
+   "id": "1197f07a",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f58197",
+   "id": "64b5cbe5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e370b8e",
+   "id": "398eae68",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ad64c6",
+   "id": "bfca56be",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c4e194",
+   "id": "6950b65e",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "547aee0a",
+   "id": "bae15a19",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0d2181",
+   "id": "6e018b3d",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871f7965",
+   "id": "7cbadac5",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a2b35e",
+   "id": "37f4eb3d",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd2c2375",
+   "id": "0e61abb6",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e146dddd",
+   "id": "bb0c08fe",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9869b32",
+   "id": "398f9656",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b14dcde",
+   "id": "369a1a90",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1802cb5c",
+   "id": "d9ee8651",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edae7f5e",
+   "id": "da20be8f",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8cde425",
+   "id": "ed0a5c31",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b9186d",
+   "id": "49446c4e",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2a4aab",
+   "id": "fb455e49",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868ed653",
+   "id": "8fc465b6",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1384a2c1",
+   "id": "e93227a4",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52f0f38d",
+   "id": "b04f7a3c",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7c48a6",
+   "id": "465d3763",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84749d82",
+   "id": "6ad1729b",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27fa9846",
+   "id": "16eb72c6",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6559ef",
+   "id": "2418b188",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9ca678",
+   "id": "2fc9ed27",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c675322",
+   "id": "180b2b34",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5796096",
+   "id": "8bd88b85",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6735571",
+   "id": "b5a1d2fb",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecbea3a1",
+   "id": "d67fb954",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b61fff3",
+   "id": "5c5c3b11",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349e8195",
+   "id": "7b5b2edb",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c41a1c",
+   "id": "9d106fe6",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8743f5b",
+   "id": "980f1f1b",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11daef8",
+   "id": "3e17746d",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc9e32a",
+   "id": "57dc0b28",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8186cd30",
+   "id": "984508a8",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6654a8ee",
+   "id": "f823c87d",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684f3ea0",
+   "id": "ae677b3f",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75093129",
+   "id": "118f6f88",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56556579",
+   "id": "ec08da6b",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15765a25",
+   "id": "1edb32cc",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407fdf5e",
+   "id": "f99df082",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b2ca7ba",
+   "id": "612c986a",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75798f2d",
+   "id": "ca871240",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e9b187",
+   "id": "a8900646",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6daee3",
+   "id": "03fe7c43",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8aea006",
+   "id": "d0e44c05",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61246f2",
+   "id": "911df569",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe4e688",
+   "id": "4fb22944",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a294d33d",
+   "id": "6bf0cb53",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590a5218",
+   "id": "29a54281",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba6105a",
+   "id": "2cba91a6",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea4ca11",
+   "id": "9ad8c6ba",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a486aedc",
+   "id": "bbff6606",
    "metadata": {
     "hide-output": false
    },
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d98c22",
+   "id": "3c632e21",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09d78602",
+   "id": "684cba0b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d61c0b1",
+   "id": "b06dd15c",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558bbd4f",
+   "id": "2ffde66b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2b00d9d",
+   "id": "43532671",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4aa6916",
+   "id": "ee62e138",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27183f85",
+   "id": "369c7d95",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3548b787",
+   "id": "f26958e1",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131fc723",
+   "id": "c48cde77",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e75c422",
+   "id": "450ae297",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3d71a6",
+   "id": "0a710dc2",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57be17e0",
+   "id": "ae56f9ff",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b169145",
+   "id": "d36c7c61",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0862fdbf",
+   "id": "1362bde9",
    "metadata": {
     "hide-output": false
    },
@@ -1215,7 +1215,7 @@
   }
  ],
  "metadata": {
-  "date": 1762728654.3937445,
+  "date": 1763689794.371989,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
