--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c380015b",
+   "id": "56cb1f2d",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01bd619",
+   "id": "03b093ef",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c85c89",
+   "id": "c12116b0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0792b57f",
+   "id": "abdc72dc",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa17ac1",
+   "id": "c5975a6d",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9f43e8",
+   "id": "ea709197",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab20ef3e",
+   "id": "d5af0444",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84997bc6",
+   "id": "ae2107b8",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41004f6",
+   "id": "2b6f51a2",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c1db0b",
+   "id": "7bf86ca2",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd83a4b3",
+   "id": "73c07ba4",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330939fc",
+   "id": "f945a38d",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119d54b8",
+   "id": "8988538f",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f507df94",
+   "id": "b4ca3908",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2d6c28",
+   "id": "9da32708",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d42588b",
+   "id": "fa32b445",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337a6b72",
+   "id": "b7782d01",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c75311",
+   "id": "e48de68f",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c177e4",
+   "id": "4a077f6e",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5566d924",
+   "id": "44846857",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e30e8b5c",
+   "id": "09d43885",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ec58b2",
+   "id": "206ca6e6",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba041fc",
+   "id": "be284971",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ad3ff3",
+   "id": "a37054ec",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac06be2",
+   "id": "3c7f43c2",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5724d498",
+   "id": "dd39a2ae",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949ac0e0",
+   "id": "8e669db0",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "936da58a",
+   "id": "d2f99124",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecab2e0f",
+   "id": "8e130c05",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7154e516",
+   "id": "41111527",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f94caee",
+   "id": "4f35eb66",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a5f916",
+   "id": "90442469",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba8dbc0",
+   "id": "c1b1638d",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfb182c",
+   "id": "cc4a477e",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096d1699",
+   "id": "ce786b44",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b407a2",
+   "id": "ee0e4733",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1762728654.644539,
+  "date": 1763689794.6110556,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
