--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e8a60c3",
+   "id": "0038bc6b",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX and Optax"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0c54dc6",
+   "id": "2feeab05",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa0f6cf",
+   "id": "dc2e4251",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc022740",
+   "id": "cb705890",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c2ca57",
+   "id": "18bf32fd",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f921a9dd",
+   "id": "a7e63bb4",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bada7fcb",
+   "id": "37757234",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ab4c2d",
+   "id": "69ede150",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc73a44b",
+   "id": "a94f3d8a",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "147ef587",
+   "id": "330d261c",
    "metadata": {},
    "source": [
     "The next piece of code is repeated from [our Keras lecture](https://jax.quantecon.org/keras.html) and generates\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cadf0826",
+   "id": "1540e593",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76629317",
+   "id": "e6bf87aa",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768e76fc",
+   "id": "a947e9c0",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e9bc233",
+   "id": "9288be62",
    "metadata": {},
    "source": [
     "Here is a function to train the model."
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6181d492",
+   "id": "96e4055c",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959a7c21",
+   "id": "3b127b96",
    "metadata": {},
    "source": [
     "The next function visualizes the prediction."
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f84f857",
+   "id": "0e7e352b",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddb3c9b",
+   "id": "b27e843b",
    "metadata": {},
    "source": [
     "Here’s a function to run all the routines above."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7c9215",
+   "id": "ab734b33",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6975f8b0",
+   "id": "a3f1e682",
    "metadata": {},
    "source": [
     "Let’s put it to work:"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c5c2f9",
+   "id": "579a6c1f",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7275b83c",
+   "id": "79427d5c",
    "metadata": {},
    "source": [
     "We’ve seen this figure before and we note the relatively low final MSE."
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a808fbf0",
+   "id": "472835ca",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ded3f16",
+   "id": "f661ecbc",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d7d2339",
+   "id": "c4cf77c6",
    "metadata": {
     "hide-output": false
    },
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fd3554",
+   "id": "741acb6a",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9505edd9",
+   "id": "9c74d239",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26292791",
+   "id": "318f6093",
    "metadata": {
     "hide-output": false
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60cebae1",
+   "id": "087078a9",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebf9c5ed",
+   "id": "180a3971",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e75dd0a7",
+   "id": "24ed06ec",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da1b09c",
+   "id": "65d7856b",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "338623a0",
+   "id": "92fdac42",
    "metadata": {},
    "source": [
     "The line above seems kind of magical, since we are differentiating with respect\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd4e696b",
+   "id": "23a94d99",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c112c12",
+   "id": "c5590acc",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76799c1",
+   "id": "6c090bc9",
    "metadata": {},
    "source": [
     "We are implementing the gradient descent update"
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502d972d",
+   "id": "6f1ee885",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93439b06",
+   "id": "3e01c572",
    "metadata": {},
    "source": [
     "This is nontrivial for a complex structure such as a neural network, so how is\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3229b9ef",
+   "id": "67c178ef",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc269d1",
+   "id": "891a362f",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a9cfdb",
+   "id": "8b5e9a2b",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79074a1d",
+   "id": "a4346a98",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b8976b",
+   "id": "df797b8b",
    "metadata": {},
    "source": [
     "This figure shows MSE across iterations:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f93124c",
+   "id": "895cb165",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9090fd0",
+   "id": "3810b677",
    "metadata": {},
    "source": [
     "Let’s check the final MSE on the validation data, at the estimated parameters."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf98e42",
+   "id": "a169b834",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ea3313",
+   "id": "fef29814",
    "metadata": {},
    "source": [
     "This MSE is not as low as we got for Keras, but we did quite well given how\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e449805",
+   "id": "c7730d3f",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766a2cb7",
+   "id": "a4795f4b",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81cd1b1",
+   "id": "c4a76960",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6999912d",
+   "id": "666939f5",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e9c7cd",
+   "id": "09e71eb8",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5478fed1",
+   "id": "d79b1518",
    "metadata": {
     "hide-output": false
    },
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e1accc",
+   "id": "7a8901b2",
    "metadata": {},
    "source": [
     "The resulting MSE is the same as our hand-coded routine."
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14452761",
+   "id": "34be607e",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56220de",
+   "id": "2472a087",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11df3107",
+   "id": "c99797ca",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7afdcfb",
+   "id": "6b264275",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64903b3a",
+   "id": "96c75c8b",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a036ad1",
+   "id": "bb5537dc",
    "metadata": {},
    "source": [
     "Here’s the MSE."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5299d7c4",
+   "id": "2b47d8cd",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3294ebe5",
+   "id": "0fae85ac",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a432c2d",
+   "id": "2a77c37d",
    "metadata": {
     "hide-output": false
    },
@@ -945,7 +945,7 @@
   }
  ],
  "metadata": {
-  "date": 1762728654.799991,
+  "date": 1763689794.7591999,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
