--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "981ca223",
+   "id": "2acd1cfe",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0999981",
+   "id": "4f3ed9ea",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edcbc30c",
+   "id": "42786a4f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1dced4e",
+   "id": "d84201dc",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7464ea",
+   "id": "d2794fd7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f658955",
+   "id": "9e81e052",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec4c4a00",
+   "id": "f261bbde",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67043ed1",
+   "id": "519b6e3b",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9579dccc",
+   "id": "647b4242",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf7f66f2",
+   "id": "2df6f807",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d9b9a06",
+   "id": "70224bbe",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71af9650",
+   "id": "82793530",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65791a24",
+   "id": "34ce1ee2",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdad4240",
+   "id": "28f186b5",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbc7164",
+   "id": "014d3db1",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9060531b",
+   "id": "7d1300a9",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33f5c30",
+   "id": "92ee9960",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75375202",
+   "id": "f4c5b2a1",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb466218",
+   "id": "4a239792",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5051f0dd",
+   "id": "a61592f6",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e50e52",
+   "id": "f5630c44",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a42f55",
+   "id": "3d448360",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbd65ba8",
+   "id": "51ab11e7",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177dd014",
+   "id": "382c0155",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017d9f8e",
+   "id": "a102f2b1",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b60e03",
+   "id": "39ad011a",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be309d31",
+   "id": "c123d26d",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64f2a9e",
+   "id": "a3d54bfd",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cafe11c7",
+   "id": "912b5ae9",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4d3b62",
+   "id": "3d329b07",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c67429e9",
+   "id": "c9ee2660",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d463e08",
+   "id": "cb589497",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a50096",
+   "id": "3613fee8",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d02be33",
+   "id": "54515145",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27967f04",
+   "id": "15965b6f",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b2cca3",
+   "id": "c64310dc",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8395d5a8",
+   "id": "1df9750a",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "378b304b",
+   "id": "1f88addb",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   }
  ],
  "metadata": {
-  "date": 1762728655.2003376,
+  "date": 1763689795.142277,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
